eks-migration/terraform/iptables.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jun 17 09:27:00 2026
*mangle
:PREROUTING ACCEPT [519468:2294084566]
:INPUT ACCEPT [412329:2243946572]
:FORWARD ACCEPT [98765:49632515]
:OUTPUT ACCEPT [356853:152609009]
:POSTROUTING ACCEPT [455132:202204692]
:CILIUM_POST_mangle - [0:0]
:CILIUM_PRE_mangle - [0:0]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
-A PREROUTING -m comment --comment "cilium-feeder: CILIUM_PRE_mangle" -j CILIUM_PRE_mangle
-A PREROUTING -i ens5 -m comment --comment "AWS, primary ENI" -m addrtype --dst-type LOCAL --limit-iface-in -j CONNMARK --set-xmark 0x80/0x80
-A PREROUTING -i eni+ -m comment --comment "AWS, primary ENI" -j CONNMARK --restore-mark --nfmask 0x80 --ctmask 0x80
-A PREROUTING -i vlan+ -m comment --comment "AWS, primary ENI" -j CONNMARK --restore-mark --nfmask 0x80 --ctmask 0x80
-A POSTROUTING -m comment --comment "cilium-feeder: CILIUM_POST_mangle" -j CILIUM_POST_mangle
-A CILIUM_PRE_mangle -m socket --transparent -m mark ! --mark 0xe00/0xf00 -m comment --comment "cilium: any->pod redirect proxied traffic to host proxy" -j MARK --set-xmark 0x200/0xffffffff
-A CILIUM_PRE_mangle -i ens5 -m comment --comment "cilium: primary ENI" -m addrtype --dst-type LOCAL --limit-iface-in -j CONNMARK --set-xmark 0x80/0x80
-A CILIUM_PRE_mangle -i lxc+ -m comment --comment "cilium: primary ENI" -j CONNMARK --restore-mark --nfmask 0x80 --ctmask 0x80
-A CILIUM_PRE_mangle -p tcp -m mark --mark 0x498d0200 -m comment --comment "cilium: TPROXY to host cilium-dns-egress proxy" -j TPROXY --on-port 36169 --on-ip 127.0.0.1 --tproxy-mark 0x200/0xffffffff
-A CILIUM_PRE_mangle -p udp -m mark --mark 0x498d0200 -m comment --comment "cilium: TPROXY to host cilium-dns-egress proxy" -j TPROXY --on-port 36169 --on-ip 127.0.0.1 --tproxy-mark 0x200/0xffffffff
COMMIT
# Completed on Wed Jun 17 09:27:00 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jun 17 09:27:00 2026
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:CILIUM_OUTPUT_raw - [0:0]
:CILIUM_PRE_raw - [0:0]
-A PREROUTING -m comment --comment "cilium-feeder: CILIUM_PRE_raw" -j CILIUM_PRE_raw
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT_raw" -j CILIUM_OUTPUT_raw
-A CILIUM_OUTPUT_raw -o lxc+ -m mark --mark 0xa00/0xfffffeff -m comment --comment "cilium: NOTRACK for proxy return traffic" -j CT --notrack
-A CILIUM_OUTPUT_raw -o cilium_host -m mark --mark 0xa00/0xfffffeff -m comment --comment "cilium: NOTRACK for proxy return traffic" -j CT --notrack
-A CILIUM_OUTPUT_raw -o lxc+ -m mark --mark 0x800/0xe00 -m comment --comment "cilium: NOTRACK for L7 proxy upstream traffic" -j CT --notrack
-A CILIUM_OUTPUT_raw -o cilium_host -m mark --mark 0x800/0xe00 -m comment --comment "cilium: NOTRACK for L7 proxy upstream traffic" -j CT --notrack
-A CILIUM_PRE_raw -m mark --mark 0x200/0xf00 -m comment --comment "cilium: NOTRACK for proxy traffic" -j CT --notrack
COMMIT
# Completed on Wed Jun 17 09:27:00 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jun 17 09:27:00 2026
*filter
:INPUT ACCEPT [412324:2243946039]
:FORWARD ACCEPT [5562:337702]
:OUTPUT ACCEPT [356361:152571490]
:CILIUM_FORWARD - [0:0]
:CILIUM_INPUT - [0:0]
:CILIUM_OUTPUT - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -m comment --comment "cilium-feeder: CILIUM_INPUT" -j CILIUM_INPUT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cilium-feeder: CILIUM_FORWARD" -j CILIUM_FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT" -j CILIUM_OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A CILIUM_FORWARD -o cilium_host -m comment --comment "cilium: any->cluster on cilium_host forward accept" -j ACCEPT
-A CILIUM_FORWARD -i cilium_host -m comment --comment "cilium: cluster->any on cilium_host forward accept (nodeport)" -j ACCEPT
-A CILIUM_FORWARD -i lxc+ -m comment --comment "cilium: cluster->any on lxc+ forward accept" -j ACCEPT
-A CILIUM_FORWARD -i cilium_net -m comment --comment "cilium: cluster->any on cilium_net forward accept (nodeport)" -j ACCEPT
-A CILIUM_FORWARD -o lxc+ -m comment --comment "cilium: any->cluster on lxc+ forward accept" -j ACCEPT
-A CILIUM_FORWARD -i lxc+ -m comment --comment "cilium: cluster->any on lxc+ forward accept (nodeport)" -j ACCEPT
-A CILIUM_INPUT -m mark --mark 0x200/0xf00 -m comment --comment "cilium: ACCEPT for proxy traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark --mark 0xa00/0xe00 -m comment --comment "cilium: ACCEPT for proxy traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark --mark 0x800/0xe00 -m comment --comment "cilium: ACCEPT for l7 proxy upstream traffic" -j ACCEPT
-A CILIUM_OUTPUT -m mark ! --mark 0xe00/0xf00 -m mark ! --mark 0xd00/0xf00 -m mark ! --mark 0x400/0xf00 -m mark ! --mark 0xa00/0xe00 -m mark ! --mark 0x800/0xe00 -m mark ! --mark 0xf00/0xf00 -m comment --comment "cilium: host->any mark as from host" -j MARK --set-xmark 0xc00/0xf00
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-SERVICES -d 172.20.135.2/32 -p tcp -m comment --comment "jenkins/jenkins-agent:agent-listener has no endpoints" -m tcp --dport 50000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.144.209/32 -p tcp -m comment --comment "jenkins/jenkins:http has no endpoints" -m tcp --dport 8080 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.41.231/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-windows-container-insights-monitoring:monitoring has no endpoints" -m tcp --dport 8888 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.17.43/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-windows:cwa-appsig-xray has no endpoints" -m tcp --dport 2000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.28.40/32 -p tcp -m comment --comment "amazon-cloudwatch/amazon-cloudwatch-observability-webhook-service has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.135.161/32 -p tcp -m comment --comment "amazon-cloudwatch/neuron-monitor-service:metrics has no endpoints" -m tcp --dport 8000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.17.43/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-windows:cwa-appsig-http has no endpoints" -m tcp --dport 4316 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.165.1/32 -p tcp -m comment --comment "amazon-cloudwatch/dcgm-exporter-service:metrics has no endpoints" -m tcp --dport 9400 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.17.43/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-windows:cwa-appsig-grpc has no endpoints" -m tcp --dport 4315 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.17.43/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-windows:cwa-server has no endpoints" -m tcp --dport 4311 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.198.99/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-windows-monitoring:monitoring has no endpoints" -m tcp --dport 8888 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-SERVICES -d 172.20.44.127/32 -p tcp -m comment --comment "cnpg-system/cnpg-webhook-service:webhook-server has no endpoints" -m tcp --dport 443 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Wed Jun 17 09:27:00 2026
# Generated by iptables-save v1.8.11 (nf_tables) on Wed Jun 17 09:27:00 2026
*nat
:PREROUTING ACCEPT [1447:122463]
:INPUT ACCEPT [45:2700]
:OUTPUT ACCEPT [19224:1169921]
:POSTROUTING ACCEPT [25706:1905392]
:CILIUM_OUTPUT_nat - [0:0]
:CILIUM_POST_nat - [0:0]
:CILIUM_PRE_nat - [0:0]
:KUBE-EXT-CG5I4G2RS3ZVWGLK - [0:0]
:KUBE-EXT-EDNDUDH2C75GIR6O - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-23XU5LVTMCOZW3T2 - [0:0]
:KUBE-SEP-5J57WFO3DUKA4Y54 - [0:0]
:KUBE-SEP-6ABGWOXAPZA2AUYP - [0:0]
:KUBE-SEP-6JRTTKGCDHNQQUVA - [0:0]
:KUBE-SEP-7WCXOCB2KN7MFTF4 - [0:0]
:KUBE-SEP-AW6PXQQ2M2X4X2G2 - [0:0]
:KUBE-SEP-B6U4LDOLUO4UO22M - [0:0]
:KUBE-SEP-DKC7BY65JVV2MGPS - [0:0]
:KUBE-SEP-ECQTYMRGRGPWC25H - [0:0]
:KUBE-SEP-FBJFPZM4NWJKBS3M - [0:0]
:KUBE-SEP-FL3USIZ2L4BB2DUE - [0:0]
:KUBE-SEP-IGOF7HQ3YTYNYX6T - [0:0]
:KUBE-SEP-KTJBRKHJPOCJKEY6 - [0:0]
:KUBE-SEP-LSDFWB564MLH6IY3 - [0:0]
:KUBE-SEP-QDYVTA36IIDIOCSC - [0:0]
:KUBE-SEP-QWEND6MDRMQVD62G - [0:0]
:KUBE-SEP-S5MMU3GXGQ76E6DW - [0:0]
:KUBE-SEP-SHSJ42YOT4VOQ6CP - [0:0]
:KUBE-SEP-SMG6CUN2HTGVNC4C - [0:0]
:KUBE-SEP-SUSSA2JIZKLCM4I2 - [0:0]
:KUBE-SEP-UAERKQXI4MEFLCDN - [0:0]
:KUBE-SEP-XYDDOFWXZXQGZRSQ - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-4U2LMEDIGD2FV22M - [0:0]
:KUBE-SVC-CG5I4G2RS3ZVWGLK - [0:0]
:KUBE-SVC-E3IBCFULSWKQCT47 - [0:0]
:KUBE-SVC-EDNDUDH2C75GIR6O - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-EZYNCFY2F7N6OQA2 - [0:0]
:KUBE-SVC-HX6PVHO5SW7EZPFR - [0:0]
:KUBE-SVC-I7SKRZYQ7PWYV5X7 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-ZUD4L6KQKCHD52W4 - [0:0]
:KUBE-SVL-44REFO6HYMT6UEFO - [0:0]
:KUBE-SVL-46FTASUL3ICC7MUR - [0:0]
:KUBE-SVL-NZTS37XDTDNXGCKJ - [0:0]
:KUBE-SVL-XZ4OOZCPJXECY5UU - [0:0]
:KUBE-SVL-Z5U3KUBJMGPW3F4Q - [0:0]
-A PREROUTING -m comment --comment "cilium-feeder: CILIUM_PRE_nat" -j CILIUM_PRE_nat
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m comment --comment "AWS, CONNMARK" -j CONNMARK --restore-mark --nfmask 0x80 --ctmask 0x80
-A OUTPUT -m comment --comment "cilium-feeder: CILIUM_OUTPUT_nat" -j CILIUM_OUTPUT_nat
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A POSTROUTING -m comment --comment "cilium-feeder: CILIUM_POST_nat" -j CILIUM_POST_nat
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A CILIUM_POST_nat -s 10.160.0.0/16 -m set --match-set cilium_node_set_v4 dst -m comment --comment "exclude traffic to cluster nodes from masquerade" -j ACCEPT
-A CILIUM_POST_nat -s 10.160.0.0/16 ! -d 10.0.0.0/16 ! -o cilium_+ -m comment --comment "cilium masquerade non-cluster" -j MASQUERADE
-A CILIUM_POST_nat -m mark --mark 0xa00/0xe00 -m comment --comment "exclude proxy return traffic from masquerade" -j ACCEPT
-A CILIUM_POST_nat -s 127.0.0.1/32 -o lxc+ -m comment --comment "cilium host->cluster from 127.0.0.1 masquerade" -j SNAT --to-source 10.0.1.36
-A KUBE-EXT-CG5I4G2RS3ZVWGLK -m comment --comment "masquerade traffic for ingress-nginx/ingress-nginx-controller:http external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-CG5I4G2RS3ZVWGLK -j KUBE-SVC-CG5I4G2RS3ZVWGLK
-A KUBE-EXT-EDNDUDH2C75GIR6O -m comment --comment "masquerade traffic for ingress-nginx/ingress-nginx-controller:https external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-EDNDUDH2C75GIR6O -j KUBE-SVC-EDNDUDH2C75GIR6O
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -m tcp --dport 30456 -j KUBE-EXT-CG5I4G2RS3ZVWGLK
-A KUBE-NODEPORTS -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -m tcp --dport 30391 -j KUBE-EXT-EDNDUDH2C75GIR6O
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE --random-fully
-A KUBE-SEP-23XU5LVTMCOZW3T2 -s 10.0.2.134/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-23XU5LVTMCOZW3T2 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.0.2.134:53
-A KUBE-SEP-5J57WFO3DUKA4Y54 -s 10.0.2.20/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-5J57WFO3DUKA4Y54 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.0.2.20:53
-A KUBE-SEP-6ABGWOXAPZA2AUYP -s 10.0.1.160/32 -m comment --comment "kube-system/hubble-peer:peer-service" -j KUBE-MARK-MASQ
-A KUBE-SEP-6ABGWOXAPZA2AUYP -p tcp -m comment --comment "kube-system/hubble-peer:peer-service" -m tcp -j DNAT --to-destination 10.0.1.160:4244
-A KUBE-SEP-6JRTTKGCDHNQQUVA -s 10.0.2.134/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-6JRTTKGCDHNQQUVA -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.0.2.134:9153
-A KUBE-SEP-7WCXOCB2KN7MFTF4 -s 10.0.1.112/32 -m comment --comment "external-secrets/external-secrets-webhook:webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-7WCXOCB2KN7MFTF4 -p tcp -m comment --comment "external-secrets/external-secrets-webhook:webhook" -m tcp -j DNAT --to-destination 10.0.1.112:10250
-A KUBE-SEP-AW6PXQQ2M2X4X2G2 -s 10.0.1.160/32 -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring" -j KUBE-MARK-MASQ
-A KUBE-SEP-AW6PXQQ2M2X4X2G2 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring" -m tcp -j DNAT --to-destination 10.0.1.160:8888
-A KUBE-SEP-B6U4LDOLUO4UO22M -s 10.0.1.160/32 -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-xray" -j KUBE-MARK-MASQ
-A KUBE-SEP-B6U4LDOLUO4UO22M -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-xray" -m tcp -j DNAT --to-destination 10.0.1.160:2000
-A KUBE-SEP-DKC7BY65JVV2MGPS -s 10.0.202.68/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-DKC7BY65JVV2MGPS -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 10.0.202.68:443
-A KUBE-SEP-ECQTYMRGRGPWC25H -s 10.0.2.247/32 -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-ECQTYMRGRGPWC25H -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http" -m tcp -j DNAT --to-destination 10.0.2.247:80
-A KUBE-SEP-FBJFPZM4NWJKBS3M -s 10.0.2.133/32 -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor" -j KUBE-MARK-MASQ
-A KUBE-SEP-FBJFPZM4NWJKBS3M -p tcp -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor" -m tcp -j DNAT --to-destination 10.0.2.133:9402
-A KUBE-SEP-FL3USIZ2L4BB2DUE -s 10.0.2.134/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-FL3USIZ2L4BB2DUE -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.0.2.134:53
-A KUBE-SEP-IGOF7HQ3YTYNYX6T -s 10.0.201.40/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-IGOF7HQ3YTYNYX6T -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 10.0.201.40:443
-A KUBE-SEP-KTJBRKHJPOCJKEY6 -s 10.0.2.20/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-KTJBRKHJPOCJKEY6 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.0.2.20:53
-A KUBE-SEP-LSDFWB564MLH6IY3 -s 10.0.2.247/32 -m comment --comment "ingress-nginx/ingress-nginx-controller-admission:https-webhook" -j KUBE-MARK-MASQ
-A KUBE-SEP-LSDFWB564MLH6IY3 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller-admission:https-webhook" -m tcp -j DNAT --to-destination 10.0.2.247:8443
-A KUBE-SEP-QDYVTA36IIDIOCSC -s 10.0.2.247/32 -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-QDYVTA36IIDIOCSC -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https" -m tcp -j DNAT --to-destination 10.0.2.247:443
-A KUBE-SEP-QWEND6MDRMQVD62G -s 10.0.2.248/32 -m comment --comment "cert-manager/cert-manager-webhook:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-QWEND6MDRMQVD62G -p tcp -m comment --comment "cert-manager/cert-manager-webhook:https" -m tcp -j DNAT --to-destination 10.0.2.248:10250
-A KUBE-SEP-S5MMU3GXGQ76E6DW -s 10.0.2.179/32 -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring" -j KUBE-MARK-MASQ
-A KUBE-SEP-S5MMU3GXGQ76E6DW -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring" -m tcp -j DNAT --to-destination 10.0.2.179:8888
-A KUBE-SEP-SHSJ42YOT4VOQ6CP -s 10.0.1.160/32 -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-http" -j KUBE-MARK-MASQ
-A KUBE-SEP-SHSJ42YOT4VOQ6CP -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-http" -m tcp -j DNAT --to-destination 10.0.1.160:4316
-A KUBE-SEP-SMG6CUN2HTGVNC4C -s 10.0.1.160/32 -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-server" -j KUBE-MARK-MASQ
-A KUBE-SEP-SMG6CUN2HTGVNC4C -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-server" -m tcp -j DNAT --to-destination 10.0.1.160:4311
-A KUBE-SEP-SUSSA2JIZKLCM4I2 -s 10.0.2.20/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-SUSSA2JIZKLCM4I2 -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.0.2.20:9153
-A KUBE-SEP-UAERKQXI4MEFLCDN -s 10.0.1.160/32 -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-grpc" -j KUBE-MARK-MASQ
-A KUBE-SEP-UAERKQXI4MEFLCDN -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-grpc" -m tcp -j DNAT --to-destination 10.0.1.160:4315
-A KUBE-SEP-XYDDOFWXZXQGZRSQ -s 172.0.32.0/32 -m comment --comment "kube-system/eks-extension-metrics-api:metrics-api" -j KUBE-MARK-MASQ
-A KUBE-SEP-XYDDOFWXZXQGZRSQ -p tcp -m comment --comment "kube-system/eks-extension-metrics-api:metrics-api" -m tcp -j DNAT --to-destination 172.0.32.0:10443
-A KUBE-SERVICES -d 172.20.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 172.20.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 172.20.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -d 172.20.204.132/32 -p tcp -m comment --comment "kube-system/eks-extension-metrics-api:metrics-api cluster IP" -m tcp --dport 443 -j KUBE-SVC-I7SKRZYQ7PWYV5X7
-A KUBE-SERVICES -d 172.20.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 172.20.116.69/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-xray cluster IP" -m tcp --dport 2000 -j KUBE-SVL-XZ4OOZCPJXECY5UU
-A KUBE-SERVICES -d 172.20.67.110/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring cluster IP" -m tcp --dport 8888 -j KUBE-SVC-4U2LMEDIGD2FV22M
-A KUBE-SERVICES -d 172.20.227.241/32 -p tcp -m comment --comment "cert-manager/cert-manager-webhook:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-ZUD4L6KQKCHD52W4
-A KUBE-SERVICES -d 172.20.116.69/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-http cluster IP" -m tcp --dport 4316 -j KUBE-SVL-Z5U3KUBJMGPW3F4Q
-A KUBE-SERVICES -d 172.20.195.220/32 -p tcp -m comment --comment "kube-system/hubble-peer:peer-service cluster IP" -m tcp --dport 443 -j KUBE-SVL-NZTS37XDTDNXGCKJ
-A KUBE-SERVICES -d 172.20.25.112/32 -p tcp -m comment --comment "external-secrets/external-secrets-webhook:webhook cluster IP" -m tcp --dport 443 -j KUBE-SVC-HX6PVHO5SW7EZPFR
-A KUBE-SERVICES -d 172.20.116.69/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-grpc cluster IP" -m tcp --dport 4315 -j KUBE-SVL-46FTASUL3ICC7MUR
-A KUBE-SERVICES -d 172.20.229.21/32 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:http cluster IP" -m tcp --dport 80 -j KUBE-SVC-CG5I4G2RS3ZVWGLK
-A KUBE-SERVICES -d 172.20.116.69/32 -p tcp -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-server cluster IP" -m tcp --dport 4311 -j KUBE-SVL-44REFO6HYMT6UEFO
-A KUBE-SERVICES -d 172.20.100.92/32 -p tcp -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor cluster IP" -m tcp --dport 9402 -j KUBE-SVC-E3IBCFULSWKQCT47
-A KUBE-SERVICES -d 172.20.229.21/32 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-EDNDUDH2C75GIR6O
-A KUBE-SERVICES -d 172.20.211.244/32 -p tcp -m comment --comment "ingress-nginx/ingress-nginx-controller-admission:https-webhook cluster IP" -m tcp --dport 443 -j KUBE-SVC-EZYNCFY2F7N6OQA2
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-4U2LMEDIGD2FV22M -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring -> 10.0.1.160:8888" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-AW6PXQQ2M2X4X2G2
-A KUBE-SVC-4U2LMEDIGD2FV22M -m comment --comment "amazon-cloudwatch/cloudwatch-agent-monitoring:monitoring -> 10.0.2.179:8888" -j KUBE-SEP-S5MMU3GXGQ76E6DW
-A KUBE-SVC-CG5I4G2RS3ZVWGLK -m comment --comment "ingress-nginx/ingress-nginx-controller:http -> 10.0.2.247:80" -j KUBE-SEP-ECQTYMRGRGPWC25H
-A KUBE-SVC-E3IBCFULSWKQCT47 -m comment --comment "cert-manager/cert-manager:tcp-prometheus-servicemonitor -> 10.0.2.133:9402" -j KUBE-SEP-FBJFPZM4NWJKBS3M
-A KUBE-SVC-EDNDUDH2C75GIR6O -m comment --comment "ingress-nginx/ingress-nginx-controller:https -> 10.0.2.247:443" -j KUBE-SEP-QDYVTA36IIDIOCSC
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.0.2.134:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-23XU5LVTMCOZW3T2
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.0.2.20:53" -j KUBE-SEP-KTJBRKHJPOCJKEY6
-A KUBE-SVC-EZYNCFY2F7N6OQA2 -m comment --comment "ingress-nginx/ingress-nginx-controller-admission:https-webhook -> 10.0.2.247:8443" -j KUBE-SEP-LSDFWB564MLH6IY3
-A KUBE-SVC-HX6PVHO5SW7EZPFR -m comment --comment "external-secrets/external-secrets-webhook:webhook -> 10.0.1.112:10250" -j KUBE-SEP-7WCXOCB2KN7MFTF4
-A KUBE-SVC-I7SKRZYQ7PWYV5X7 -m comment --comment "kube-system/eks-extension-metrics-api:metrics-api -> 172.0.32.0:10443" -j KUBE-SEP-XYDDOFWXZXQGZRSQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.0.2.134:9153" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-6JRTTKGCDHNQQUVA
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.0.2.20:9153" -j KUBE-SEP-SUSSA2JIZKLCM4I2
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 10.0.201.40:443" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-IGOF7HQ3YTYNYX6T
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 10.0.202.68:443" -j KUBE-SEP-DKC7BY65JVV2MGPS
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.0.2.134:53" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-FL3USIZ2L4BB2DUE
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.0.2.20:53" -j KUBE-SEP-5J57WFO3DUKA4Y54
-A KUBE-SVC-ZUD4L6KQKCHD52W4 -m comment --comment "cert-manager/cert-manager-webhook:https -> 10.0.2.248:10250" -j KUBE-SEP-QWEND6MDRMQVD62G
-A KUBE-SVL-44REFO6HYMT6UEFO -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-server -> 10.0.1.160:4311" -j KUBE-SEP-SMG6CUN2HTGVNC4C
-A KUBE-SVL-46FTASUL3ICC7MUR -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-grpc -> 10.0.1.160:4315" -j KUBE-SEP-UAERKQXI4MEFLCDN
-A KUBE-SVL-NZTS37XDTDNXGCKJ -m comment --comment "kube-system/hubble-peer:peer-service -> 10.0.1.160:4244" -j KUBE-SEP-6ABGWOXAPZA2AUYP
-A KUBE-SVL-XZ4OOZCPJXECY5UU -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-xray -> 10.0.1.160:2000" -j KUBE-SEP-B6U4LDOLUO4UO22M
-A KUBE-SVL-Z5U3KUBJMGPW3F4Q -m comment --comment "amazon-cloudwatch/cloudwatch-agent:cwa-appsig-http -> 10.0.1.160:4316" -j KUBE-SEP-SHSJ42YOT4VOQ6CP
COMMIT
# Completed on Wed Jun 17 09:27:00 2026
